[tool.poetry]
name = "phonehelper"
version = "0.1.0"
description = "Phone and birthdays notebook for my contacts"
authors = ["Viktor <asgardcasting@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
datetime = "5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
